--- a/project1.css
+++ b/project1.css
@@ -1,4 +1,6 @@
 
+@import url('https://fonts.googleapis.com/css?family=Kalam|Lobster');
+
 body{
     background-image: url("images/tile.jpg");
     padding: 10px;
@@ -30,6 +32,18 @@ input[type='text'], textarea{
     margin-bottom: 5px;
     width: 100%;
     border: 1px gray solid;
+    color: #303030;
+    padding-left: 5px;
+}
+
+input[type='text']{
+    font-weight: 600;
+    font-size: 16px;
+}
+
+textarea{
+    font-family: 'Kalam',Arial, Helvetica, sans-serif;
+    font-size: 18px;
 }
 
 label{
@@ -97,6 +111,7 @@ button{
         opacity:1;
     }
 }
+
 .titlepaper{
     width: 135px;
     height: 22px;
@@ -117,7 +132,7 @@ button{
     word-wrap: break-word;
     overflow: hidden;
     color:#243656;
-    font-family: 'Kalam';
+    font-family: 'Kalam',Arial, Helvetica, sans-serif;
     font-size: 20px;
     font-weight: 400;
     
